--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@js-temporal/polyfill": "^0.5.1",
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
 		"@supabase/supabase-js": "^2.49.4"
 	}
