--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.5.1",
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
-		"@supabase/supabase-js": "^2.49.4"
+		"@supabase/supabase-js": "^2.49.4",
+		"html2pdf.js": "^0.10.3",
+		"pdfmake": "^0.2.20"
 	}
 }
