updated vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
             ]
         },
         {
-            "source": "/(.*)\\.(?:jpg|jpeg|gif|png|svg|webp)$",
+            "source": "/(.+)\\.(jpg|jpeg|gif|png|svg|webp)$",
             "headers": [
                 {
                     "key": "Cache-Control",
@@ -36,7 +36,7 @@
             ]
         },
         {
-            "source": "/(.*)\\.(?:js|css)$",
+            "source": "/(.+)\\.(js|css)$",
             "headers": [
                 {
                     "key": "Cache-Control",
