--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,20 @@
 {
     "version": 2,
-    "public": false,
     "github": {
+        "enabled": true,
         "silent": true
     },
+    "git": {
+        "deploymentEnabled": {
+            "main": true
+        }
+    },
+    "buildCommand": "npm run build",
+    "installCommand": "npm install",
+    "framework": "sveltekit",
+    "regions": [
+        "iad1"
+    ],
     "headers": [
         {
             "source": "/(.*)",
