--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/uuid": "^10.0.0",
 		"dotenv": "^16.5.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -33,6 +34,7 @@
 		"@js-temporal/polyfill": "^0.5.1",
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
 		"@supabase/supabase-js": "^2.49.4",
-		"pdfmake": "^0.2.20"
+		"pdfmake": "^0.2.20",
+		"uuid": "^11.1.0"
 	}
 }
