--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 		"@stripe/stripe-js": "^7.8.0",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
+		"@types/qrcode": "^1.5.6",
 		"pdfmake": "^0.2.20",
+		"qrcode": "^1.5.4",
 		"stripe": "^18.4.0",
 		"uuid": "^11.1.0"
 	}
