new security features

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,12 @@
 # Enable rewrite engine
 RewriteEngine On
 
+# Force HTTPS in production (uncomment these 4 lines when SSL is configured)
+# RewriteCond %{HTTPS} !=on
+# RewriteCond %{HTTP_HOST} !^localhost [NC]
+# RewriteCond %{HTTP_HOST} !^127\.0\.0\.1
+# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 # Don't rewrite if the file exists
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule ^ - [L]
@@ -33,7 +39,7 @@ RewriteRule ^(.*)$ index.php [QSA,L]
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
 
-    # HSTS (only if HTTPS - uncomment when using HTTPS)
+    # HSTS - uncomment when using HTTPS in production
     # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 </IfModule>
 
