--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "smalot/pdfparser": "^2.12",
+        "phpoffice/phpword": "^1.4"
     },
     "autoload": {
         "files": [
@@ -12,4 +14,3 @@
         ]
     }
 }
-
